# ohio_voter_registration_parser

./: .gitignore  CLAUDE.md  CLAUDE_backup_2026-05-10.md  CLAUDE_backup_20260508_112401.md  DATA_QUALITY.md  GEMINI.md  HANDOFF_NEXT_SESSION.md  HGL_HANDOFF_BRIEF.md  LICENSE  PIPELINE_GUIDE.md  PUSH_TO_GITHUB.md  README.md  RUN_LOCALLY.md  apply_cache_and_mem_fix.py  apply_groupings_fix.py  charts.js  check_le.py  check_parquet.py  check_wards_parquet.py  export_unc_targets.py  jurisdictional_groupings.py  main.py  manifest.json  mixed_lean_predictor.py  ohio_county_boards_directory.md  ohio_voter_pipeline.py  ohio_voter_pipeline_wrapper.py  originalindex.html  precinct_party_export.py  precinct_unc_export.py  pyproject.toml  requirements.txt  run_lean_predictor_all_cohorts.py  run_mixed_lean_predictor_all_counties.py  scratch_convert.py  test_meta.parquet  unc_lifetime_d_predictor.py  voter_analysis.ipynb  voter_data_cleaner.py  voter_data_cleaner_v2.py  (+3 more)
.agents/: AGENTS.md
.antigravitycli/: 0adc5338-e10a-4698-81a0-2b85b55b97aa.json
.claude/: settings.json  settings.local.json.old
.git - Copy/: COMMIT_EDITMSG  FETCH_HEAD  ORIG_HEAD  config  sg-reviewed-shas
SiteDesign/: DESIGN_HANDOFF_1..md  DESIGN_SYNTHESIS.MD  HANDOFF_LLM_NARRATIVE_DEMO.md  manifest.json
archive/: CLAUDE.2026-05-26T0356.md  GEMINI_backup_20260509_2355.md  HANDOFF_OPUS_PASS_B.md  JUPYTER_QUICKSTART.md  RUN_LOCALLY.md  collision_report.md
assets/: v2.css
conductor/: unc-target-csvs.md
docs/: ADDING_DATA.md  CLAUDE.md.bak.2026-05-13  CLAUDE_backup_20260508_112401.md  CNAME  app.htm  (+11 more)
(+96601 files in other folders)
