[project]
name = "election-data"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "beautifulsoup4>=4.12.0",
    "curl-cffi>=0.7.0",
    "duckdb>=1.5.2",
    "geopandas>=1.1.3",
    "ipykernel>=6.0.0",
    "openpyxl>=3.1.0",
    "orjson>=3.9.0",
    "pandas>=2.0.0",
    "polars>=1.0.0",
    "psutil>=5.9.0",
    "pyarrow>=14.0.0",
    "xlsxwriter>=3.1.0",
]
