[project]
name = "election-data"
version = "0.1.0"
description = "Ohio SOS statewide voter file ingest, cohort classifier, and dashboard pipeline."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "beautifulsoup4>=4.12.0",
    "curl-cffi>=0.7.0",
    "duckdb>=1.5.2",
    "geopandas>=1.1.3",
    "ipykernel>=6.0.0",
    "openpyxl>=3.1.0",
    "orjson>=3.9.0",
    "pandas>=2.0.0",  # used in jurisdictional_groupings.py, ohio_voter_pipeline_wrapper.py, tools/scoring/unc_lifetime_d_predictor.py — predates polars mandate; migrate incrementally
    "polars>=1.0.0",
    "psutil>=5.9.0",
    "pyarrow>=14.0.0",
    "pymupdf4llm>=0.0.17",  # PDF -> LLM-ready markdown; used by tools/admin/pdf_to_markdown.py
    "rapidfuzz>=3.0.0",     # fuzzy name matching; used by tools/lookup/match_officials_to_voters.py
    "xlsxwriter>=3.1.0",
]
